# feincms-elephantagenda

./: AUTHORS  ChangeLog  LICENSE  MANIFEST.in  README.rst  requirements.txt  setup.cfg
elephantagenda/: __init__.py  api.py  apps.py  contents.py  models.py  urls.py  views.py
elephantagenda/backends/: __init__.py
elephantagenda/backends/agenda/: admin.py  models.py
elephantagenda/backends/fb_agenda/: admin.py  models.py
elephantagenda/backends/gmaps_agenda/: admin.py  models.py
elephantagenda/templates/admin/fb_agenda/: change_form.html
elephantagenda/templates/agenda/: event_detail.html  event_list.html
elephantagenda/templates/content/agenda/: _fb_event_list.html  event_list.html  event_map.html  gmap_event_list.html
requirements/: fb.txt
