[metadata]
name = feincms-elephantagenda
summary = A versatile agenda module for FeinCMS.
description-file =
    README.rst
author = Simon Bächler
author-email = mail@michaelkuty.eu
version = 1.0.0
home-page = https://github.com/feinheit/feincms-elephantagenda.git
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[files]
packages =
    elephantagenda

[extras_require]
facebook = -r requirements/fb.txt
